--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@ are arranged. In other words, it describes the layout of a website.
   <link rel="icon" href="images/fry.png" type="image/x-png">
 
   <script src="js/jQuery.js"></script>
-  <script src="http://code.highcharts.com/highcharts.js"></script>
-  <script src="http://code.highcharts.com/modules/exporting.js"></script>
+  <script src="js/highcharts.js"></script>
+  <script src="js/exporting.js"></script>
   <script src="js/helper.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAfRfHFy1cIG4xBWZcsncyfuGHbBLmR1W0"></script>
 
