Bootstrap and more projects

--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@ are arranged. In other words, it describes the layout of a website.
   <script src="js/exporting.js"></script>
   <script src="js/helper.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAfRfHFy1cIG4xBWZcsncyfuGHbBLmR1W0"></script>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
@@ -32,7 +33,6 @@ are arranged. In other words, it describes the layout of a website.
 </head>
 <body unresolved>
   <div id="main">
-   
     <div id="header" class="center-content">
       <ul id="topContacts" class="flex-box"></ul>
     </div>
